2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: We
	  should only create the clip after we've measured for the
	  first time. Fixes the default value tests.

2009-11-20  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Replace
	  ScrollViewer.UpdateFromChild with
	  ScrollViewer.InvalidateScrollInfo as that's what that method
	  is there for. Keep Can[Horizontally|Vertically]Scroll up to
	  date and use those for deciding whether or not we need to
	  use an infinite size to measure the child. 

2009-11-10  Larry Ewing  <lewing@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Reorder
	arguments so my head doesn't hurt.

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* Controls/Src/ToolTip/ToolTip.cs: add stubbed things for
	PlacementProperty and PlacementTargetProperty.

	r: rolf

2009-11-08  Andreia Gaita  <avidigal@novell.com>

	* RuntimeControls/SilverlightControls/Button.cs: Add missing
	OnClick	override

	r: toshok

2009-11-06  Chris Toshok  <toshok@ximian.com>

	* Controls/Src/ListBox/ListBoxItem.cs: InvokeLoaded no longer
	takes event args since it doesn't emit the event.

2009-11-06  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: User
	  the correct value for ExtentHeight and clean up some of the
	  over-invalidations in ScrollViewer so that it doesn't suck
	  up all the available CPU. Fixes 442 and also improves
	  ScrollViewer significantly in the SL Toolkit demo
	  (especially the WrapPanel demo). r: spouliot

2009-11-04  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs: If the content of
	  ListBoxItem is a Control, don't enter the Disabled state. I
	  assume the reason for this is that (for example) if you put